Added sponsors pdf

--- a/src/app/website/parent/parent.component.html
+++ b/src/app/website/parent/parent.component.html
@@ -11,7 +11,7 @@
                 <button class="m-1" routerLink="/media" [ngClass]="isActive('/media') ? 'material-button-filled' : 'material-button-outlined'">Media</button>
                 <button class="material-button-outlined my-1" routerLink="/">Fair</button>
                 <a class="material-button-outlined m-1" href="https://forms.gle/vzTGhFdCephRSEfJ6">Recruitment</a>
-                <button class="my-1" routerLink ="/sponsors" [ngClass]="isActive('/sponsors') ? 'material-button-filled' : 'material-button-outlined'">Sponsors</button>
+                <a class="material-button-outlined my-1" href ="assets/epoch1_sponsorship_brochure.pdf" >Sponsors</a>
                 <div class="form-switch m-1 pb-1">
                     <input class="form-check-input" type="checkbox" id="themeSwitch" (change)="switchTheme()"
                         [checked]="isDarkTheme">
