--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,7 +16,7 @@
         <label class="fs-2 mt-4 synthek">About Epoch 1.0</label>
         <p>
             Epoch 1.0 is the first large-scale tech-related event that GITAM
-            University experiences. It is a two-day fest conducted by GCG at
+            University experiences. It is a two-day fest conducted by GitHub Community GITAM at
             GITAM University, Bangalore. This fest primarily focuses on
             promoting technology among students in GITAM.
             There are four main events - Technical Treasure Hunt, LAN Gaming,
@@ -32,9 +32,9 @@
             GitHub Community GITAM (GCG) was founded in September 2021
             unofficially by a group of six like-minded individuals in GITAM
             Bangalore to promote technology and its importance in the university.
-            In January 2022, GCG was named an official SIG (Special Interest
+            In January 2022, GitHub Community GITAM was named an official SIG (Special Interest
             Group) under the Directorate of Student Life. From a group of six
-            people, GCG grew to be a community of over 350 people. It is known
+            people, GitHub Community GITAM grew to be a community of over 350 people. It is known
             by students on all three campuses at Visakhapatnam, Hyderabad, and
             Bangalore. Our Mission is to facilitate an active and striving technical
             community on campus. We have a team of 25 working every day
@@ -42,7 +42,7 @@
         </p>
     </div>
     <div class="fs-4 my-4 container">
-        <label class="mt-4 fs-2 synthek">About Gitam & DOSL</label>
+        <label class="mt-4 fs-2 synthek">About GITAM & DOSL</label>
         <p>
             Gandhi Institute of Technology and Management is a deemed to be a
             university in Visakhapatnam, Andhra Pradesh. Founded by the late Dr
