--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<section class="navbar shadow-sm">
+<section class="navbar shadow-sm" style="height: 50px;">
     <div class="d-flex justify-content-between h-100 w-100">
         <img class="mx-3" src="assets/images/dosl.png">
         <img src="assets/images/gcg.png">
@@ -9,12 +9,12 @@
 <section>
 
     <div class="bg-image text-center m-4">
-        <label class="display-1 synthek my-4 text-white">Epoch 1.0</label>
+        <label class="display-1 synthek my-5 text-white">Epoch 1.0</label>
     </div>
 
-    <div class="fs-4 my-4 container">
-        <label class="fs-2 mt-4 synthek">About Epoch 1.0</label>
-        <p>
+    <div class="fs-5 py-4 container">
+        <label class="fs-2 synthek">About Epoch 1.0</label>
+        <div>
             Epoch 1.0 is the first large-scale tech-related event that GITAM
             University experiences. It is a two-day fest conducted by GitHub Community GITAM at
             GITAM University, Bangalore. This fest primarily focuses on
@@ -24,12 +24,12 @@
             are conducted on all three campuses before the fest. Finalists in each
             event from each campus shall come to the Bangalore campus to
             compete with the other finalists from the other campuses.
-        </p>
+        </div>
     </div>
 
-    <div class="fs-4 my-4 container">
-        <label class="mt-4 fs-2 synthek">About GitHub Gitam</label>
-        <p>
+    <div class="fs-5 py-4 container">
+        <label class="fs-2 synthek">About GitHub Gitam</label>
+        <div>
             GitHub Community GITAM (GCG) was founded in September 2021
             unofficially by a group of six like-minded individuals in GITAM
             Bangalore to promote technology and its importance in the university.
@@ -40,14 +40,25 @@
             Bangalore. Our Mission is to facilitate an active and striving technical
             community on campus. We have a team of 25 working every day
             towards our mission.
-        </p>
+        </div>
     </div>
-    
-    <div class="container my-4">
-        <label class="fs-2 synthek mt-4">FAQs</label>
+
+    <div class="container overflow-hidden py-4">
+        <label class="fs-2 synthek">Our Instagram</label>
+        <div class="marquee">
+            <div class="d-flex my-2">
+                <img *ngFor="let post of posts" class="marquee-img mx-2" [attr.src]="'assets/instagram/'+post['name']"
+                    height="200" style="transition: 500ms; cursor: pointer;" (click)="openLink(post['post_url'])">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container py-4">
+        <label class="fs-2 synthek">FAQs</label>
         <div class="accordion" id="accordionExample">
-            <div class="accordion-item fs-3" *ngFor="let faq of faqs; index as i">
-                <button class="accordion-button collapsed fs-4" data-bs-toggle="collapse"
+            <div class="accordion-item" *ngFor="let faq of faqs; index as i">
+                <button class="accordion-button collapsed fs-5" data-bs-toggle="collapse"
                     [attr.data-bs-target]="'#collapse'+i">
                     {{faq.question}}
                 </button>
@@ -60,8 +71,8 @@
         </div>
     </div>
 
-    <div class="container fs-4 my-4">
-        <label class="mt-4 fs-2 synthek">Contact us</label>
+    <div class="container fs-5 py-4">
+        <label class="fs-2 synthek">Contact us</label>
         <div class="row">
             <div class="col">
                 <div>
@@ -85,7 +96,7 @@
 
 </section>
 
-<section class="footer">
+<section class="footer" style="height: 40px;">
     <div class="d-flex justify-content-center h-100 w-100 mt-5">
         <img class="mx-3" src="assets/images/instagram.png" (click)="open('instagram')" style="cursor: pointer;">
         <img class="mx-3" src="assets/images/discord.png" (click)="open('discord')" style="cursor: pointer;">
