--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,7 +8,7 @@
 
 <section>
 
-    <div class="bg-image text-center m-4">
+    <div class="bg-image text-center m-4" style="background-image: url(assets/images/bgImage.png);">
         <label class="display-1 synthek my-5 text-white">Epoch 1.0</label>
     </div>
 
