--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,106 +1,115 @@
-<section class="navbar shadow-sm" style="height: 50px;">
-    <div class="d-flex justify-content-between h-100 w-100">
-        <img class="mx-3" src="assets/images/dosl.png">
-        <img src="assets/images/gcg.png">
-        <img class="mx-3" src="assets/images/gitam.jpg">
-    </div>
-</section>
-
-<section>
-
-    <div class="bg-image text-center m-4" style="background-image: url(assets/images/bgImage.png);">
-        <label class="display-1 synthek my-5 text-white">Epoch 1.0</label>
-    </div>
-
-    <div class="fs-5 py-4 container">
-        <label class="fs-2 synthek">About Epoch 1.0</label>
-        <div>
-            Epoch 1.0 is the first large-scale tech-related event that GITAM
-            University experiences. It is a two-day fest conducted by GitHub Community GITAM at
-            GITAM University, Bangalore. This fest primarily focuses on
-            promoting technology among students in GITAM.
-            There are four main events - Technical Treasure Hunt, LAN Gaming,
-            Product Commercial Videography, and Tech Trivia. These four events
-            are conducted on all three campuses before the fest. Finalists in each
-            event from each campus shall come to the Bangalore campus to
-            compete with the other finalists from the other campuses.
-        </div>
-    </div>
-
-    <div class="fs-5 py-4 container">
-        <label class="fs-2 synthek">About GitHub Gitam</label>
-        <div>
-            GitHub Community GITAM (GCG) was founded in September 2021
-            unofficially by a group of six like-minded individuals in GITAM
-            Bangalore to promote technology and its importance in the university.
-            In January 2022, GitHub Community GITAM was named an official SIG (Special Interest
-            Group) under the Directorate of Student Life. From a group of six
-            people, GitHub Community GITAM grew to be a community of over 350 people. It is known
-            by students on all three campuses at Visakhapatnam, Hyderabad, and
-            Bangalore. Our Mission is to facilitate an active and striving technical
-            community on campus. We have a team of 25 working every day
-            towards our mission.
-        </div>
-    </div>
-
-    <div class="container overflow-hidden py-4">
-        <label class="fs-2 synthek">Our Instagram</label>
-        <div class="marquee">
-            <div class="d-flex my-2">
-                <img *ngFor="let post of posts" class="marquee-img mx-2" [attr.src]="'assets/instagram/'+post['name']"
-                    height="200" style="transition: 500ms; cursor: pointer;" (click)="openLink(post['post_url'])">
+<nav class="navbar navbar-expand-sm fixed-top bg-white border shadow rounded m-2">
+    <div class="container-fluid m-1">
+        <img class="mx-1" height="30" src="assets/images/gitam.jpg">
+        <img class="mx-1" height="30" src="assets/images/dosl.png">
+        <img class="mx-1 mr-auto" height="30" src="assets/images/gcg.png">
+        <button class="navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+            <div class="navbar-nav nav-padding px-2 align-items-center ms-auto">
+                <a class="btn btn-sm border m-1" href="#about">About</a>
+                <a class="btn btn-sm border m-1" href="#instagram">Instagram</a>
+                <a class="btn btn-sm border m-1" href="#faqs">FAQs</a>
+                <a class="btn btn-sm border m-1" href="#contact">Contact</a>
             </div>
         </div>
     </div>
+</nav>
+
+<div style="height: 60px;"></div>
+
+<div class="bg-image text-center m-4" style="background-image: url(assets/images/bgImage.png);">
+    <label class="display-1 synthek my-5 text-white">Epoch 1.0</label>
+</div>
+
+<div id="about" class="fs-5 py-4 container" style="scroll-margin-top: 60px;">
+    <label class="fs-2 synthek">About Epoch 1.0</label>
+    <div>
+        Epoch 1.0 is the first large-scale tech-related event that GITAM
+        University experiences. It is a two-day fest conducted by GitHub Community GITAM at
+        GITAM University, Bangalore. This fest primarily focuses on
+        promoting technology among students in GITAM.
+        There are four main events - Technical Treasure Hunt, LAN Gaming,
+        Product Commercial Videography, and Tech Trivia. These four events
+        are conducted on all three campuses before the fest. Finalists in each
+        event from each campus shall come to the Bangalore campus to
+        compete with the other finalists from the other campuses.
+    </div>
+</div>
+
+<div class="fs-5 py-4 container" style="scroll-margin-top: 60px;">
+    <label class="fs-2 synthek">About GitHub Gitam</label>
+    <div>
+        GitHub Community GITAM (GCG) was founded in September 2021
+        unofficially by a group of six like-minded individuals in GITAM
+        Bangalore to promote technology and its importance in the university.
+        In January 2022, GitHub Community GITAM was named an official SIG (Special Interest
+        Group) under the Directorate of Student Life. From a group of six
+        people, GitHub Community GITAM grew to be a community of over 350 people. It is known
+        by students on all three campuses at Visakhapatnam, Hyderabad, and
+        Bangalore. Our Mission is to facilitate an active and striving technical
+        community on campus. We have a team of 25 working every day
+        towards our mission.
+    </div>
+</div>
+
+<div id="instagram" class="container py-4" style="scroll-margin-top: 60px;">
+    <label class="fs-2 synthek">Our Instagram</label>
+    <div class="marquee overflow-hidden">
+        <div class="d-flex my-2">
+            <img *ngFor="let post of posts" class="marquee-img mx-2" [attr.src]="'assets/instagram/'+post['name']"
+                height="200" style="transition: 500ms; cursor: pointer;" (click)="openLink(post['post_url'])">
+        </div>
+    </div>
+</div>
 
 
-    <div class="container py-4">
-        <label class="fs-2 synthek">FAQs</label>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item" *ngFor="let faq of faqs; index as i">
-                <button class="accordion-button collapsed fs-5" data-bs-toggle="collapse"
-                    [attr.data-bs-target]="'#collapse'+i">
-                    {{faq.question}}
-                </button>
-                <div [attr.id]="'collapse'+i" class="accordion-collapse collapse fs-5">
-                    <div class="accordion-body">
-                        {{faq.answer}}
-                    </div>
+<div id="faqs" class="container py-4" style="scroll-margin-top: 60px;">
+    <label class="fs-2 synthek">FAQs</label>
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item" *ngFor="let faq of faqs; index as i">
+            <button class="accordion-button collapsed fs-5" data-bs-toggle="collapse"
+                [attr.data-bs-target]="'#collapse'+i">
+                {{faq.question}}
+            </button>
+            <div [attr.id]="'collapse'+i" class="accordion-collapse collapse fs-5">
+                <div class="accordion-body">
+                    {{faq.answer}}
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container fs-5 py-4">
-        <label class="fs-2 synthek">Contact us</label>
-        <div class="row">
-            <div class="col">
-                <div>
-                    <div>Srinija Dharani</div>
-                    <div>President - Epoch 1.0, GitHub GITAM</div>
-                    <div>+91 7013811599</div>
-                </div>
-            </div>
-            <div class="col">
-                <div>
-                    <div>Shaan Vivian Dasari</div>
-                    <div>Vice President - Epoch 1.0</div>
-                    <div>+91 9052665588</div>
-                </div>
+<div id="contact" class="container fs-5 py-4" style="scroll-margin-top: 60px;">
+    <label class="fs-2 synthek">Contact us</label>
+    <div class="row">
+        <div class="col">
+            <div>
+                <div>Srinija Dharani</div>
+                <div>President - Epoch 1.0, GitHub GITAM</div>
+                <div>+91 7013811599</div>
             </div>
         </div>
-        <div class="my-2">
-            github_community@gitam.in
+        <div class="col">
+            <div>
+                <div>Shaan Vivian Dasari</div>
+                <div>Vice President - Epoch 1.0</div>
+                <div>+91 9052665588</div>
+            </div>
         </div>
     </div>
+    <div class="my-2">
+        github_community@gitam.in
+    </div>
+</div>
 
-</section>
-
-<section class="footer" style="height: 40px;">
+<div class="footer" style="height: 40px;">
     <div class="d-flex justify-content-center h-100 w-100 mt-5">
         <img class="mx-3" src="assets/images/instagram.png" (click)="open('instagram')" style="cursor: pointer;">
         <img class="mx-3" src="assets/images/discord.png" (click)="open('discord')" style="cursor: pointer;">
         <img class="mx-3 p-2" src="assets/images/github.png" (click)="open('github')" style="cursor: pointer;">
         <img class="mx-3 p-2" src="assets/images/linkedin.png" (click)="open('linkedin')" style="cursor: pointer;">
     </div>
-</section>
+</div>
