--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,24 @@ body {
     scroll-padding-top: 60px;
 }
 
+button {
+    box-shadow: none !important;
+}
+
+.accordion-button:after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
 .synthek {
     font-family: synthek;
 }
 
-a{
+a {
     text-decoration: none;
-    color: white;
+}
+
+#home {
+    background-image: url(/assets/imgs/Group\ 10.png);
+    background-repeat: no-repeat;
+    background-position: bottom -250px right calc(50% - 60px)
 }
